v1.1.0/modules/schema/pages/class/GovSteamFV3.adoc
= `GovSteamFV3`
:toclevels: 4


+++Simplified GovSteamIEEE1 steam turbine governor with Prmax limit and fast valving.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GovSteamFV3`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
**** *`GovSteamFV3`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<gv1,`gv1`>>
//| [[slots_table.gv1]]<<gv1,`gv1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain valve position point 1 (<i>GV1</i>).  Typical value = 0.+++
| _n/a_

| <<gv2,`gv2`>>
//| [[slots_table.gv2]]<<gv2,`gv2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain valve position point 2 (<i>GV2</i>).  Typical value = 0,4.+++
| _n/a_

| <<gv3,`gv3`>>
//| [[slots_table.gv3]]<<gv3,`gv3`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain valve position point 3 (<i>GV3</i>).  Typical value = 0,5.+++
| _n/a_

| <<gv4,`gv4`>>
//| [[slots_table.gv4]]<<gv4,`gv4`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain valve position point 4 (<i>GV4</i>).  Typical value = 0,6.+++
| _n/a_

| <<gv5,`gv5`>>
//| [[slots_table.gv5]]<<gv5,`gv5`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain valve position point 5 (<i>GV5</i>).  Typical value = 1.+++
| _n/a_

| <<gv6,`gv6`>>
//| [[slots_table.gv6]]<<gv6,`gv6`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain valve position point 6 (<i>GV6</i>).  Typical value = 0.+++
| _n/a_

| <<k,`k`>>
//| [[slots_table.k]]<<k,`k`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Governor gain, (reciprocal of droop) (<i>K</i>).  Typical value = 20.+++
| _n/a_

| <<k1,`k1`>>
//| [[slots_table.k1]]<<k1,`k1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Fraction of turbine power developed after first boiler pass (<i>K1</i>).  Typical value = 0,2.+++
| _n/a_

| <<k2,`k2`>>
//| [[slots_table.k2]]<<k2,`k2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Fraction of turbine power developed after second boiler pass (<i>K2</i>).  Typical value = 0,2.+++
| _n/a_

| <<k3,`k3`>>
//| [[slots_table.k3]]<<k3,`k3`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Fraction of hp turbine power developed after crossover or third boiler pass (<i>K3</i>). Typical value = 0,6.+++
| _n/a_

| <<mwbase,`mwbase`>>
//| [[slots_table.mwbase]]<<mwbase,`mwbase`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++
| _n/a_

| <<pgv1,`pgv1`>>
//| [[slots_table.pgv1]]<<pgv1,`pgv1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain power value point 1 (<i>Pgv1</i>).  Typical value = 0.+++
| _n/a_

| <<pgv2,`pgv2`>>
//| [[slots_table.pgv2]]<<pgv2,`pgv2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain power value point 2 (<i>Pgv2</i>).  Typical value = 0,75.+++
| _n/a_

| <<pgv3,`pgv3`>>
//| [[slots_table.pgv3]]<<pgv3,`pgv3`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain power value point 3 (<i>Pgv3</i>).  Typical value = 0,91.+++
| _n/a_

| <<pgv4,`pgv4`>>
//| [[slots_table.pgv4]]<<pgv4,`pgv4`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain power value point 4 (<i>Pgv4</i>).  Typical value = 0,98.+++
| _n/a_

| <<pgv5,`pgv5`>>
//| [[slots_table.pgv5]]<<pgv5,`pgv5`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain power value point 5 (<i>Pgv5</i>).  Typical value = 1.+++
| _n/a_

| <<pgv6,`pgv6`>>
//| [[slots_table.pgv6]]<<pgv6,`pgv6`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain power value point 6 (<i>Pgv6</i>).  Typical value = 0.+++
| _n/a_

| <<pmax,`pmax`>>
//| [[slots_table.pmax]]<<pmax,`pmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum valve opening, PU of <i>MWbase</i> (<i>Pmax</i>) (&gt; GovSteamFV3.pmin).  Typical value = 1.+++
| _n/a_

| <<pmin,`pmin`>>
//| [[slots_table.pmin]]<<pmin,`pmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum valve opening, PU of <i>MWbase</i> (<i>Pmin</i>) (&lt; GovSteamFV3.pmax).  Typical value = 0.+++
| _n/a_

| <<prmax,`prmax`>>
//| [[slots_table.prmax]]<<prmax,`prmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Max. pressure in reheater (<i>Prmax</i>).  Typical value = 1.+++
| _n/a_

| <<t1,`t1`>>
//| [[slots_table.t1]]<<t1,`t1`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Governor lead time constant (<i>T1</i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<t2,`t2`>>
//| [[slots_table.t2]]<<t2,`t2`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Governor lag time constant (<i>T2</i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<t3,`t3`>>
//| [[slots_table.t3]]<<t3,`t3`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Valve positioner time constant (<i>T3</i>) (&gt; 0).  Typical value = 0.+++
| _n/a_

| <<t4,`t4`>>
//| [[slots_table.t4]]<<t4,`t4`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Inlet piping/steam bowl time constant (<i>T4</i>) (&gt;= 0).  Typical value = 0,2.+++
| _n/a_

| <<t5,`t5`>>
//| [[slots_table.t5]]<<t5,`t5`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of second boiler pass (i.e. reheater) (<i>T5</i>) (&gt; 0 if fast valving is used, otherwise &gt;= 0). ...+++
| _n/a_

| <<t6,`t6`>>
//| [[slots_table.t6]]<<t6,`t6`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of crossover or third boiler pass (<i>T6</i>) (&gt;= 0).  Typical value = 10.+++
| _n/a_

| <<ta,`ta`>>
//| [[slots_table.ta]]<<ta,`ta`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time to close intercept valve (IV) (<i>Ta</i>) (&gt;= 0).  Typical value = 0,97.+++
| _n/a_

| <<tb,`tb`>>
//| [[slots_table.tb]]<<tb,`tb`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time until IV starts to reopen (<i>Tb</i>) (&gt;= 0).  Typical value = 0,98.+++
| _n/a_

| <<tc,`tc`>>
//| [[slots_table.tc]]<<tc,`tc`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time until IV is fully open (<i>Tc</i>) (&gt;= 0).  Typical value = 0,99.+++
| _n/a_

| <<uc,`uc`>>
//| [[slots_table.uc]]<<uc,`uc`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Maximum valve closing velocity (<i>Uc</i>).  Unit = PU / s.  Typical value = -1.+++
| _n/a_

| <<uo,`uo`>>
//| [[slots_table.uo]]<<uo,`uo`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Maximum valve opening velocity (<i>Uo</i>).  Unit = PU / s.  Typical value = 0,1.+++
| _n/a_

| <<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
//| [[slots_table.AsynchronousMachineDynamics]]<<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
| 0..1 +
xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
| +++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either...+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
//| [[slots_table.SynchronousMachineDynamics]]<<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 0..1 +
xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an...+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
//| [[slots_table.TurbineLoadControllerDynamics]]<<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
| 0..1 +
xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]
| +++Turbine load controller providing input to this turbine-governor.+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#AsynchronousMachineDynamics]
=== `AsynchronousMachineDynamics`
+++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.AsynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.AsynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#gv1]
=== `gv1`
+++Nonlinear gain valve position point 1 (<i>GV1</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.gv1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv1,&#10548;>>
--
////


//[discrete]
[#gv2]
=== `gv2`
+++Nonlinear gain valve position point 2 (<i>GV2</i>).  Typical value = 0,4.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.gv2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv2,&#10548;>>
--
////


//[discrete]
[#gv3]
=== `gv3`
+++Nonlinear gain valve position point 3 (<i>GV3</i>).  Typical value = 0,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.gv3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv3,&#10548;>>
--
////


//[discrete]
[#gv4]
=== `gv4`
+++Nonlinear gain valve position point 4 (<i>GV4</i>).  Typical value = 0,6.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.gv4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv4,&#10548;>>
--
////


//[discrete]
[#gv5]
=== `gv5`
+++Nonlinear gain valve position point 5 (<i>GV5</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.gv5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv5,&#10548;>>
--
////


//[discrete]
[#gv6]
=== `gv6`
+++Nonlinear gain valve position point 6 (<i>GV6</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.gv6`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv6,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#k]
=== `k`
+++Governor gain, (reciprocal of droop) (<i>K</i>).  Typical value = 20.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.k`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.k,&#10548;>>
--
////


//[discrete]
[#k1]
=== `k1`
+++Fraction of turbine power developed after first boiler pass (<i>K1</i>).  Typical value = 0,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.k1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.k1,&#10548;>>
--
////


//[discrete]
[#k2]
=== `k2`
+++Fraction of turbine power developed after second boiler pass (<i>K2</i>).  Typical value = 0,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.k2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.k2,&#10548;>>
--
////


//[discrete]
[#k3]
=== `k3`
+++Fraction of hp turbine power developed after crossover or third boiler pass (<i>K3</i>). Typical value = 0,6.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.k3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.k3,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#mwbase]
=== `mwbase`
+++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.mwbase`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.mwbase,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#pgv1]
=== `pgv1`
+++Nonlinear gain power value point 1 (<i>Pgv1</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.pgv1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv1,&#10548;>>
--
////


//[discrete]
[#pgv2]
=== `pgv2`
+++Nonlinear gain power value point 2 (<i>Pgv2</i>).  Typical value = 0,75.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.pgv2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv2,&#10548;>>
--
////


//[discrete]
[#pgv3]
=== `pgv3`
+++Nonlinear gain power value point 3 (<i>Pgv3</i>).  Typical value = 0,91.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.pgv3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv3,&#10548;>>
--
////


//[discrete]
[#pgv4]
=== `pgv4`
+++Nonlinear gain power value point 4 (<i>Pgv4</i>).  Typical value = 0,98.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.pgv4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv4,&#10548;>>
--
////


//[discrete]
[#pgv5]
=== `pgv5`
+++Nonlinear gain power value point 5 (<i>Pgv5</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.pgv5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv5,&#10548;>>
--
////


//[discrete]
[#pgv6]
=== `pgv6`
+++Nonlinear gain power value point 6 (<i>Pgv6</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.pgv6`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv6,&#10548;>>
--
////


//[discrete]
[#pmax]
=== `pmax`
+++Maximum valve opening, PU of <i>MWbase</i> (<i>Pmax</i>) (&gt; GovSteamFV3.pmin).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.pmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pmax,&#10548;>>
--
////


//[discrete]
[#pmin]
=== `pmin`
+++Minimum valve opening, PU of <i>MWbase</i> (<i>Pmin</i>) (&lt; GovSteamFV3.pmax).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.pmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pmin,&#10548;>>
--
////


//[discrete]
[#prmax]
=== `prmax`
+++Max. pressure in reheater (<i>Prmax</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.prmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.prmax,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.SynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.SynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#t1]
=== `t1`
+++Governor lead time constant (<i>T1</i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.t1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t1,&#10548;>>
--
////


//[discrete]
[#t2]
=== `t2`
+++Governor lag time constant (<i>T2</i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.t2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t2,&#10548;>>
--
////


//[discrete]
[#t3]
=== `t3`
+++Valve positioner time constant (<i>T3</i>) (&gt; 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.t3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t3,&#10548;>>
--
////


//[discrete]
[#t4]
=== `t4`
+++Inlet piping/steam bowl time constant (<i>T4</i>) (&gt;= 0).  Typical value = 0,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.t4`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t4,&#10548;>>
--
////


//[discrete]
[#t5]
=== `t5`
+++Time constant of second boiler pass (i.e. reheater) (<i>T5</i>) (&gt; 0 if fast valving is used, otherwise &gt;= 0).  Typical value = 0,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.t5`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t5,&#10548;>>
--
////


//[discrete]
[#t6]
=== `t6`
+++Time constant of crossover or third boiler pass (<i>T6</i>) (&gt;= 0).  Typical value = 10.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.t6`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t6,&#10548;>>
--
////


//[discrete]
[#ta]
=== `ta`
+++Time to close intercept valve (IV) (<i>Ta</i>) (&gt;= 0).  Typical value = 0,97.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.ta`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ta,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tb]
=== `tb`
+++Time until IV starts to reopen (<i>Tb</i>) (&gt;= 0).  Typical value = 0,98.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.tb`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tb,&#10548;>>
--
////


//[discrete]
[#tc]
=== `tc`
+++Time until IV is fully open (<i>Tc</i>) (&gt;= 0).  Typical value = 0,99.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.tc`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tc,&#10548;>>
--
////


//[discrete]
[#TurbineLoadControllerDynamics]
=== `TurbineLoadControllerDynamics`
+++Turbine load controller providing input to this turbine-governor.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.TurbineLoadControllerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.TurbineLoadControllerDynamics,&#10548;>>
--
////


//[discrete]
[#uc]
=== `uc`
+++Maximum valve closing velocity (<i>Uc</i>).  Unit = PU / s.  Typical value = -1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.uc`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.uc,&#10548;>>
--
////


//[discrete]
[#uo]
=== `uo`
+++Maximum valve opening velocity (<i>Uo</i>).  Unit = PU / s.  Typical value = 0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamFV3.uo`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.uo,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
